[package]
name = "astrostack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
imageproc = "0.23.0"
rayon = "1.5.3"
clap = { version = "4.0.10", features = ["derive"] }
cv = "0.6.0"
either = "1.8.0"

[patch.crates-io]
image = { path = "../image" }
#image = { git = "https://github.com/oberien/image", branch = "rgb64f" }
cv = { path = "../cv/cv" }
